fix bug sidebar on mobile

--- a/client/src/pages/Shop/components/Layout/Layout.module.scss
+++ b/client/src/pages/Shop/components/Layout/Layout.module.scss
@@ -27,6 +27,7 @@
     height: 100%;
     animation: fade 0.4s cubic-bezier(0,0.8,1,1);
     overflow-y: scroll;
+    z-index: 9;
     overscroll-behavior: contain;
     &::-webkit-scrollbar {
         width: 5px;
